chore: switch to pnpm

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "jest": "^24.7.1",
-    "babel-jest": "^24.9.0",
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5"
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "babel-jest": "^28.1.0",
+    "jest": "^28.1.0"
   }
 }
